--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "regedit",
         "registry",
         "windows",
-        "rust"
+        "rust",
+        "node regedit"
     ],
     "files": [
         "index.d.ts",
@@ -57,7 +58,8 @@
         "build": "napi build --platform --release --js js-binding.js --dts js-binding.d.ts",
         "build:debug": "napi build --platform --js js-binding.js --dts js-binding.d.ts",
         "prepublishOnly": "napi prepublish -t npm && esbuild js-binding.js --minify --allow-overwrite --outfile=js-binding.js",
-        "test": "ava __test__/**",
+        "test": "ava __test__/regedit-rs.*.*",
+        "bench": "ava __test__/benchmarks.*.*",
         "universal": "napi universal",
         "version": "napi version"
     },
