--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "@swc-node/register": "^1.6.8",
     "@swc/core": "^1.3.99",
     "@types/node": "^20.10.0",
+    "@types/winreg": "^1.2.36",
     "ava": "^5.3.1",
+    "benny": "^3.7.1",
     "esbuild": "^0.19.8",
-    "typescript": "^5.3.2"
+    "regedit": "^5.1.2",
+    "typescript": "^5.3.2",
+    "winreg": "^1.2.5"
   },
   "ava": {
     "require": [
@@ -60,7 +64,7 @@
     "build:debug": "napi build --platform --js js-binding.js --dts js-binding.d.ts",
     "prepublishOnly": "napi prepublish -t npm && esbuild js-binding.js --minify --allow-overwrite --outfile=js-binding.js",
     "test": "ava __test__/regedit-rs.*.*",
-    "bench": "ava __test__/benchmarks.*.*",
+    "bench": "node -r @swc-node/register benchmark/bench.ts",
     "universal": "napi universal",
     "version": "napi version"
   },
