--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@napi-rs/cli": "^2.18.0",
-    "@swc-node/register": "^1.9.0",
-    "@swc/core": "^1.4.8",
-    "@types/node": "^20.11.30",
-    "@types/winreg": "^1.2.36",
-    "ava": "^6.1.2",
+    "@napi-rs/cli": "2.18.4",
+    "@swc-node/register": "1.9.0",
+    "@swc/core": "1.4.17",
+    "@types/node": "22.13.10",
+    "@types/winreg": "1.2.36",
+    "ava": "6.2.0",
     "benny": "^3.7.1",
-    "esbuild": "^0.20.2",
-    "regedit": "^5.1.3",
-    "typescript": "^5.4.2",
-    "winreg": "^1.2.5"
+    "esbuild": "^0.25.1",
+    "regedit": "5.1.3",
+    "typescript": "5.4.2",
+    "winreg": "1.2.5"
   },
   "ava": {
     "require": [
@@ -64,12 +64,16 @@
     "build": "napi build --platform --release --js js-binding.js --dts js-binding.d.ts",
     "build:debug": "napi build --platform --js js-binding.js --dts js-binding.d.ts",
     "prepublishOnly": "napi prepublish -t npm && esbuild js-binding.js --minify --allow-overwrite --outfile=js-binding.js",
-    "test": "ava __test__/regedit-rs.*.*",
+    "test": "ava --verbose __test__/regedit-rs.*.*",
     "bench": "node -r @swc-node/register benchmark/bench.ts",
     "universal": "napi universal",
     "version": "napi version"
   },
   "packageManager": "yarn@4.0.2",
   "repository": "git@github.com:Zagrios/regedit-rs.git",
-  "description": "A high-performance Windows registry toolkit, powered by Rust with napi-rs"
+  "description": "A high-performance Windows registry toolkit, powered by Rust with napi-rs",
+  "volta": {
+    "node": "18.20.7",
+    "yarn": "4.7.0"
+  }
 }
