--- a/package.json
+++ b/package.json
@@ -19,27 +19,24 @@
     "js-binding.d.ts"
   ],
   "napi": {
-    "name": "regedit-rs",
-    "triples": {
-      "defaults": false,
-      "additional": [
-        "aarch64-pc-windows-msvc",
-        "x86_64-pc-windows-msvc",
-        "i686-pc-windows-msvc"
-      ]
-    }
+    "binaryName": "regedit-rs",
+    "targets": [
+      "aarch64-pc-windows-msvc",
+      "x86_64-pc-windows-msvc",
+      "i686-pc-windows-msvc"
+    ]
   },
   "license": "MIT",
   "devDependencies": {
-    "@napi-rs/cli": "2.18.4",
-    "@swc-node/register": "1.9.0",
-    "@swc/core": "1.4.17",
-    "@types/node": "22.13.10",
+    "@napi-rs/cli": "3.4.1",
+    "@swc-node/register": "1.11.1",
+    "@swc/core": "1.15.2",
+    "@types/node": "24.10.1",
     "@types/winreg": "1.2.36",
-    "ava": "6.2.0",
+    "ava": "6.4.1",
     "benny": "^3.7.1",
-    "esbuild": "^0.25.1",
-    "regedit": "5.1.3",
+    "esbuild": "^0.27.0",
+    "regedit": "5.1.4",
     "typescript": "5.4.2",
     "winreg": "1.2.5"
   },
@@ -73,7 +70,7 @@
   "repository": "git@github.com:Zagrios/regedit-rs.git",
   "description": "A high-performance Windows registry toolkit, powered by Rust with napi-rs",
   "volta": {
-    "node": "18.20.7",
+    "node": "24.11.1",
     "yarn": "4.7.0"
   }
 }
